<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cotacoes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#072749"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.joaod.jsonormlite.CotacoesActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text_cotacao"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="25dp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#5cb85c"
        android:onClick="atualizarCotacao"
        android:text="@string/botao_cotacao"
        android:textColor="@android:color/background_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#ec971f"
            android:onClick="salvar"
            android:text="@string/botao_voltar"
            android:textColor="@android:color/background_light" />


    </LinearLayout>

    <TextView
        android:id="@+id/tvCotacaoAtual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_cotacaoAtual"
        android:textColor="#ffffff"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_dolar"
            android:textAlignment="gravity"
            android:textColor="#ffffff"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/tvDolar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textAlignment="gravity"
            android:textColor="#ffffff"
            android:textSize="23sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_euro"
            android:textAlignment="gravity"
            android:textColor="#ffffff"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/tvEuro"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textAlignment="gravity"
            android:textColor="#ffffff"
            android:textSize="23sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_bitcoin"
            android:textAlignment="gravity"
            android:textColor="#ffffff"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/tvBitcoin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textAlignment="gravity"
            android:textColor="#ffffff"
            android:textSize="23sp" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_historico"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="30dp" />

    <ListView
        android:id="@+id/listViewCotacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:paddingBottom="10dp"
        android:textColor="#fff">

    </ListView>


</LinearLayout>
